test/org/midica/testfiles/failing/global-unknown-cmd.midica
INCLUDE inc/instruments.midica

* cmd d5:maj

0 c /4
